@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = test compattest
+parts = test compattest compattest-trunk
 
 [test]
 recipe = zc.recipe.testrunner
@@ -10,3 +10,9 @@ eggs = z3c.recipe.compattest[test]
 [compattest]
 recipe = z3c.recipe.compattest
 include = z3c.recipe.compattest
+
+[compattest-trunk]
+recipe = z3c.recipe.compattest
+include = zope.dottedname
+use_trunk = true
+
